  - CHG: Raise an error when there is no male or female in a diploid parents chooser.
  - CHG: Remove parameter newSubPopSizeExpr and rename newSubPopSize to subPopSize,
		and newSubPopSizeFunc to subPopSizeFunc.
  - CHG: Merge parameters subPopSize and subPopSizeFunc. This parameter can now
		take both a list and a function.

version 0.9.0 - (Rev 2130) Dec 15, 2008 (tagged, but not publically released)
  - CHG: add population::setSubPopByIndInfo to allow flexible migration.
  - CHG: migrator now uses an information field "migrate_to".
  - CHG: Add function population::extract.
  - CHG: Remove parameter ancGen from population::clone().
  - NEW: Dump() also display information fields.
  - NEW: Expose population::pushAndDiscard(pop) as population::push().
  - NEW: Add parameter subPop to all operators.
  - CHG: Move operators pySubset(), randomSample(), caseControlSample()
		and affectedSibpairSample from simuPOP core to simuUtil.py.
		Remove src/sampler.*.
  - CHG: Remove infoTagger, sexTagger and affectionTagger and will
		replace them by pedigreeTagger.
  - CHG: Remove population::removeEmptySubPops().
  - NEW: Add support for subpopulation names.
  - CHG: Remove intializer, spread and pyInit operators.
  - CHG: Add parameter initSex to initByFreq and initByValue.
  - NEW: Initializers now support virtual subpopulations.
  - CHG: Recombiantor no longer supports recombination by sex, 
		and haplodiploid chromosomes.
  - CHG: Recombinator now supports different types of chromosomes.
  - NEW: Add ops parameter to mating schemes.
  - NEW: add mitochondrialGenoTransmitter.
  - NEW: add population::updateInfoFieldsFrom.
  - NEW: Add two examples in doc/cookbook, demonstrating the use of customized
		genotype transmitters and mitochondrialGenoTransmitter.

version 0.8.9 - (Rev 1948) Nov 18, 2008 (tagged, but not publically released)
  - DOC: Adjust reference output for simuPOP classes.
  - CHG: Rename genoStruTrait::haplodiploid to isHaplodiploid.