@@ -11,6 +11,7 @@ version 0.9.1 - Not released, available at https://simupop.svn.sourceforge.net/s
 		and newSubPopSizeFunc to subPopSizeFunc.
   - CHG: Merge parameters subPopSize and subPopSizeFunc. This parameter can now
 		take both a list and a function.
+  - BUG: Fix population load/save under windows, add simulator equality test (__cmp__).
 
 version 0.9.0 - (Rev 2130) Dec 15, 2008 (tagged, but not publically released)
   - CHG: add population::setSubPopByIndInfo to allow flexible migration.
